tests/functions/invalid/redefine_variable.amu
s32 foo(s32 x) {
    x:s32 = 3;
}

main :: () -> s32 {
    foo(1);
}